--- a/src/garminmanager/ui/MainGui.ui
+++ b/src/garminmanager/ui/MainGui.ui
@@ -14,42 +14,13 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="labelMainPic">
-    <property name="geometry">
-     <rect>
-      <x>850</x>
-      <y>30</y>
-      <width>191</width>
-      <height>111</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>../../../../.designer/images/fenix3.jpg</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="mTextTB">
-    <property name="geometry">
-     <rect>
-      <x>550</x>
-      <y>50</y>
-      <width>256</width>
-      <height>151</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>230</y>
+      <y>300</y>
       <width>881</width>
-      <height>541</height>
+      <height>471</height>
      </rect>
     </property>
    </widget>
@@ -80,7 +51,7 @@
      <item row="0" column="0">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QPushButton" name="mTestPB">
+        <widget class="QPushButton" name="test_pb">
          <property name="text">
           <string>TestButton</string>
          </property>
@@ -101,14 +72,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="mBackupPB">
+        <widget class="QPushButton" name="backup_pb">
          <property name="text">
           <string>Backup</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="mGetDataFromWatchPB">
+        <widget class="QPushButton" name="data_from_watch_pb">
          <property name="text">
           <string>Get Data from Watch</string>
          </property>
@@ -144,6 +115,77 @@
       <widget class="QCheckBox" name="m_UseDefaultFolderCB">
        <property name="text">
         <string>Use default Folder</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QLabel" name="label_fenix_pic">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>50</y>
+      <width>111</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Picture</string>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>50</y>
+      <width>338</width>
+      <height>223</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_3">
+     <item row="0" column="0" colspan="4">
+      <widget class="QTextBrowser" name="text_tb"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="load_settings_pb">
+       <property name="text">
+        <string>Load</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="save_settings_pb">
+       <property name="text">
+        <string>Save</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QComboBox" name="folder_cb">
+       <item>
+        <property name="text">
+         <string>Fit Folder</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Backup Folder</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Watch Folder</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QPushButton" name="set_folders_pb">
+       <property name="text">
+        <string>Set</string>
        </property>
       </widget>
      </item>
