--- a/src/garminmanager/ui/MainGui.ui
+++ b/src/garminmanager/ui/MainGui.ui
@@ -90,7 +90,18 @@
      <item row="0" column="3">
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
-        <widget class="QDateTimeEdit" name="start_de"/>
+        <widget class="QDateTimeEdit" name="start_de">
+         <property name="dateTime">
+          <datetime>
+           <hour>0</hour>
+           <minute>0</minute>
+           <second>0</second>
+           <year>2019</year>
+           <month>2</month>
+           <day>28</day>
+          </datetime>
+         </property>
+        </widget>
        </item>
        <item row="1" column="1">
         <widget class="QLabel" name="label_2">
@@ -107,7 +118,18 @@
         </widget>
        </item>
        <item row="1" column="0">
-        <widget class="QDateTimeEdit" name="end_de"/>
+        <widget class="QDateTimeEdit" name="end_de">
+         <property name="dateTime">
+          <datetime>
+           <hour>0</hour>
+           <minute>0</minute>
+           <second>0</second>
+           <year>2019</year>
+           <month>2</month>
+           <day>28</day>
+          </datetime>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
